--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-ng-app="eventspireApp">
+<html lang="en">
 <head>
   <script src="js/angular/angular.js"></script>
   <script src="js/angular-route/angular-route.js"></script>
@@ -9,21 +9,11 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/eventspire.css" />
 </head>
-<body>
+<body data-ng-app="eventspireApp">
   <div class="container">
   <h1>Search</h1>
-    <div data-ng-controller="EventSpireListCtrl">
-      
-      <form class="well form-search">
-		<label>Search:</label>
-		<input type="text" ng-model="keywords" class="input-medium search-query" placeholder="Keywords...">
-		<button type="submit" class="btn" ng-click="search()">Search</button>
-		
-    </form>
-<pre ng-model="result">
-{{result}}
-</pre>
-    </div>
+  <div data-ng-view></div>
+  
     <hr />
     <footer class="footer">
       
