--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,7 @@
     <![endif]-->
   </head>
 
-  <body>
+  <body class="homepage">
 
     <nav class="navbar navbar-inverse navbar-fixed-top alpha70">
       <div class="container">
