--- a/html/eventsearch.html
+++ b/html/eventsearch.html
@@ -30,7 +30,7 @@
     <![endif]-->
   </head>
 
-  <body class="gray-bg">
+  <body class="graybg">
 
     <nav class="navbar navbar-inverse navbar-fixed-top alpha70">
       <div class="container">
