--- a/html/index.html
+++ b/html/index.html
@@ -22,6 +22,8 @@
     <script src="js/ui-bootstrap-custom-tpls-0.12.1.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script type="text/javascript" src="//maps.google.com/maps/api/js"></script>
+    <script type="text/javascript" src="js/ng-map.min.js"></script>
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -37,6 +39,11 @@
 
   <body data-ng-class="bodyClass">
 
+  <div class="please-wait" ng-show="LM">
+  <img src="images/ajax-loader.gif" alt="" />
+
+  </div>
+
     <nav class="navbar navbar-inverse navbar-fixed-top alpha70">
       <div class="container">
         
@@ -49,10 +56,10 @@
     <div class="container">
 
       <div class="starter-template">
-        <div class="search-header" data-ng-class="{short-header: bodyClass=='gray-bg'}" >
+        <div class="search-header" >
           <h1>What do you love?</h1>
           <div data-ng-view></div>    
-        </div>>
+        </div>
       </div>
     </div><!-- /.container -->
       <div class="row white large-space">
